--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<div class="content">
 			<header class="title">
-				<h1>Mission Statement</h1>
-				<h2>Brigham Young University-Idaho</h2>
+				<h1>MISSION STATEMENT</h1>
+				<h2>BRIGHAM YOUNG UNIVERSITY-IDAHO</h2>
 				<hr>
 			</header>
 			<main>
