--- a/coolpics/index.html
+++ b/coolpics/index.html
@@ -3,71 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cool Pics</title>
     <link rel="stylesheet" href="coolpics.css"> 
 </head>
 <body>
-<header>
-</header>
-<main>
-    <nav>
-        <h1>Cool Pics 📷</h1>
-        <ul>
-            <li>Home</li>
-            <li>People</li>
-            <li>Places</li>
-            <li>About</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
-    <h3>
-        Current work
-    </h3>
-
-    <section class ="gallery">
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-        <figure>
-            <img src ="norris-sm.jpeg" alt="picture">
-        </figure>
-
-    </section>
-
-
-</main>
-<footer>
-    ©2023 Not a real site 😀
-</footer>
-<script src="coolpics.js"></script>
+    <!-- <div class="viewer hide">
+        <button class="close-viewer">X</button>
+        <img src="" alt="alt description">
+    </div> -->
+    <header>
+        <nav>
+            <h1>Cool Pics 📷</h1>
+            <button id="menuButton">Menu</button>
+            <ul id="menuItems">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#people">People</a></li>
+                <li><a href="#places">Places</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h3>Current Work</h3>
+        <section class="gallery">
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+            <figure><img src="norris-sm.jpeg" alt="A picture of Chuck Norris"></figure>
+        </section>
+    </main>
+    <footer>
+        ©2023 Not a real site 😀
+    </footer>
+    <script src="coolpics.js"></script>
 </body>
 </html>
+
