--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,23 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECIPEBOOK</title>
     <link rel="stylesheet" href="styles.css">
-    <img src="recipe-book.png" alt="Recipe-Book">
-    <div class="search-container"> <form action="/search"> <input type="text" placeholder="Search.." name="search"> <button type="submit">Search</button>
 </head>
+
 <body>
-    
-</body>
-<footer>
-    <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">Recipe icons created by Freepik - Flaticon</a>
-    <div class="social">
-        <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
-        <a href="#"><img src="images/instagram_icon.svg" alt="instagram icon"></a>
-        <a href="#"><img src="images/youtube_icon.svg" alt="youtube icon"></a>
-        <a href="#"><img src="images/pinterest_icon.svg" alt="pinterest icon"></a>
+    <header> 
+        <div class="title">
+        <img src="images/recipe-book.png" alt="Recipe-Book">
+        <h1>RecipeBook</h1>
     </div>
-</footer>
+        <div class="search-container">
+            <form action="/search"> 
+                <input type="text" placeholder="Find a Recipe" name="search"> 
+                <button type="submit">
+                    <span>Search</span>
+                    <img src="images/search.svg" alt="Search-Icon">
+                    
+                </button>
+            </form>
+        </div>
+    </header>
+    <main>
+        <div class="recipe">
+            <img src="images/sweet-potato-waffle-md.jpg" alt="sweet-potato-waffle">
+            <div class="details">
+            <div class="tags">
+                <span>Wallfes</span>
+                <span>Sweet Potato</span>
+                <span>Side</span>
+            </div>
+            <h2>Sweet potato waffles</h2>
+            <span
+                class="rating"
+                role="img"
+                aria-label="Rating: 4 out of 5 stars"
+            >
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star">⭐</span>
+                <span aria-hidden="true" class="icon-star-empty">⭐</span>
+                <span aria-hidden="true" class="icon-star-empty">☆</span>
+            </span>
+            <p>
+                Savory waffles made with Sweet potato with a hint of Ginger
+            </p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">Recipe icons created by Freepik -
+            Flaticon</a>
+        <div class="social">
+            <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
+            <a href="#"><img src="images/instagram_icon.svg" alt="instagram icon"></a>
+            <a href="#"><img src="images/youtube_icon.svg" alt="youtube icon"></a>
+            <a href="#"><img src="images/pinterest_icon.svg" alt="pinterest icon"></a>
+        </div>
+    </footer>
+
+</body>
+
 </html>
