work for recipes part 2

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -1,3 +1,5 @@
+<!-- <tag_name attr attr1="value"></tag_name> -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RECIPEBOOK</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="main.js" type="module"></script>
 </head>
 
 <body>
@@ -15,7 +18,7 @@
         <h1>RecipeBook</h1>
     </div>
         <div class="search-container">
-            <form action="/search"> 
+            <form> 
                 <input type="text" placeholder="Find a Recipe" name="search"> 
                 <button type="submit">
                     <span>Search</span>
@@ -26,7 +29,7 @@
         </div>
     </header>
     <main>
-        <div class="recipe">
+        <!-- <div class="recipe">
             <img src="images/sweet-potato-waffle-md.jpg" alt="sweet-potato-waffle">
             <div class="details">
             <div class="tags">
@@ -50,7 +53,7 @@
                 Savory waffles made with Sweet potato with a hint of Ginger
             </p>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <a href="https://www.flaticon.com/free-icons/recipe" title="recipe icons">Recipe icons created by Freepik -
